--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
                 <div class="col-sm-6 col-xs-12">
                     <h4>Связаься</h4>
                     <p><i class="fa fa-phone"></i><a href="tel:+79174354175">+79174354175</a></p>
-                    <p><i class="fa fa-envelope"></i><a href="mailto:renlok87@gmail.com">tsumbaluk888@gmail.com</a></p>
+                    <p><i class="fa fa-envelope"></i><a href="mailto:renlok87@gmail.com">renlok87@gmail.com</a></p>
                     <p><i class="fa fa-map-marker"></i>Россия Уфа</p>
                 </div>
             </div>
