--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <li><a href="/">Главная</a></li>
             <li><a href=#>О себе</a></li>
             <li><a href="#">Портфолио</a></li>
-            <li><a href="#">Плагины</a></li>
+            <li><a href="#">Наработки</a></li>
             <li><a href="#">Блог</a></li>
             <li><a href="#contacts">Контакты</a></li>
         </ul>
@@ -398,10 +398,10 @@
         <div class=black_section_wrap>
             <div class=title_block>
                 <h2 class="section_title front_side">
-                    Плагины
+                    Наработки
                     <span class=sub_title>разработка / идеи</span>
                     <span class="section_title back_side">
-							Плагины
+							Наработки
 							<span class=sub_title>разработка / идеи</span>
 							</span>
                 </h2>
@@ -410,39 +410,23 @@
                 <div class=row>
                     <div class=col-md-7>
                         <div class="site-descr centr">
-                            <h2 class=title-left>jQuery-svg-progress</h2>
-                            <p class=left>Это уникальный и единственный в своем роде jQuery plugin позволяющий отображать инфографику на вашем веб ресурсе, используя его вы сможете разнообразить свой сайт одной из шести фигур, а также есть возможность добавить кастомный&#8230;</p>
-                        </div>
+                            <h2 class=title-left>Caesar-alt</h2>
+                            <p class=left>Готовая сборка для старта верстки</div>
+                            <p>Основана на:</p>
+                        <ul>
+                            <li>Pug</li>
+                            <li>Sass</li>
+                            <li>Gulp/Bower</li>
+                            <li>Rsync</li>
+                        </ul>
                     </div>
                     <div class="col-md-5 buttons-wrap">
                         <div class=buttons>
-                            <a href="plugins/jquery-svg-progress" class="download site-link white mt3">
+                            <a href="https://github.com/renlok87/Caesar-alt" class="download site-link white mt3">
                                 <span><i class="fa fa-book"></i>Документация</span>
                                 <span><i class="fa fa-book"></i>Документация</span>
                             </a>
-                            <a href="https://github.com/rodan888/jQuery-svg-progress" target=_blank rel=nofollow class="download site-link white mt3">
-                                <span><i class="fa fa-download"></i>Скачать</span>
-                                <span><i class="fa fa-download"></i>Скачать</span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="container mt4 mb4">
-                <div class=row>
-                    <div class=col-md-7>
-                        <div class="site-descr centr">
-                            <h2 class=title-left>jQuery-svg-popup</h2>
-                            <p class=left>Надоели типичные модальные окна?! Есть решение - jQuery-svg-popup. Быстрый, легкий (всего 5kb), прост в использовании. Ето решение разнообразит дизайн вашего сайта, а также придаст уникальности и стиля!</p>
-                        </div>
-                    </div>
-                    <div class="col-md-5 buttons-wrap">
-                        <div class=buttons>
-                            <a href=jquery-svg-popup class="download site-link white mt3">
-                                <span><i class="fa fa-book"></i>Документация</span>
-                                <span><i class="fa fa-book"></i>Документация</span>
-                            </a>
-                            <a href="https://github.com/rodan888/jQuery-svg-popup" target=_blank rel=nofollow class="download site-link white mt3">
+                            <a href="https://github.com/renlok87/Caesar-alt" target=_blank rel=nofollow class="download site-link white mt3">
                                 <span><i class="fa fa-download"></i>Скачать</span>
                                 <span><i class="fa fa-download"></i>Скачать</span>
                             </a>
@@ -530,7 +514,7 @@
             <div class=container>
                 <div class=row>
                     <div class="col-sm-4 col-xs-6">© <a href="http://renlok87.github.io/">renlok87.github.io</a></div>
-                    <div class="col-sm-4 center col-xs-6"><a href=sitemap.xml><i class="fa fa-sitemap"> </i>Sitemap</a></div>
+                    <!--<div class="col-sm-4 center col-xs-6"><a href=sitemap.xml><i class="fa fa-sitemap"> </i>Sitemap</a></div>-->
                     <div class="col-sm-4 col-xs-12">
                         <div class=dev><a href="http://renlok87.github.io/" target=_blank rel=nofollow>Developed by<span>Renal Safiulinl</span></a></div>
                     </div>
@@ -551,7 +535,7 @@
         <li><a href="/">Главная</a></li>
         <li><a href=#>О себе</a></li>
         <li><a href="#">Портфолио</a></li>
-        <li><a href="#">Плагины</a></li>
+        <li><a href="#">Наработки</a></li>
         <li><a href="#">Блог</a></li>
         <li><a href="#">Контакты</a></li>
     </ul>
