--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@ Vte, Утечки, Целевой объем
         <div class="row">
             <div class="col-md-6 col-sm-12">
                 <div class="text-wrap">
-                    <h2 class="title">
+                    <h2 class="title" style="font-size: 36px">
                         Заявка на покупку
                     </h2>
                     <form action="/action_page.php" class="sendForm">
