--- a/app/index.html
+++ b/app/index.html
@@ -28,9 +28,9 @@
             </div>
         </div>
         <div class="navbar__RB">
-            <div class="button button_navbar">
+            <a class="button button_navbar" href="#form">
                 Заказать
-            </div>
+            </a>
         </div>
 
     </div>
@@ -49,17 +49,17 @@
                     </h1>
                     <div class="horiz">
                         <ul id="imageGallery" >
-                            <li data-thumb="./images/src/big-img-1.png" class="big-picture horizPicture">
-                                <img src="./images/src/t1.png" alt="Alt 1" data-caption="Caption 1" data-href="demo.html">
+                            <li data-thumb="https://medpribor.pro/files/2018/02/89e05b06bfb46ae3b527b7b5246820ab.jpg" class="big-picture horizPicture">
+                                <img src="https://medpribor.pro/files/2018/02/89e05b06bfb46ae3b527b7b5246820ab.jpg" alt="Alt 1" data-caption="Caption 1" data-href="demo.html">
                             </li>
-                            <li data-thumb="./images/src/t2.png" class="big-picture horizPicture">
-                                <img src="./images/src/t2.png" alt="Alt 1" data-caption="Caption 1" data-href="demo.html">
+                            <li data-thumb="https://medpribor.pro/files/2018/02/2c75cb58acfe7a8a69d9354d9df79126.jpg" class="big-picture horizPicture">
+                                <img src="https://medpribor.pro/files/2018/02/2c75cb58acfe7a8a69d9354d9df79126.jpg" alt="Alt 1" data-caption="Caption 1" data-href="demo.html">
                             </li>
-                            <li data-thumb="./images/src/t1.png" class="big-picture horizPicture">
-                                <img src="./images/src/t3.png" alt="Alt 1" data-caption="Caption 1" data-href="demo.html">
+                            <li data-thumb="https://medpribor.pro/files/2018/02/cd650ad8756b195a369f1733ed1a046c.jpg" class="big-picture horizPicture">
+                                <img src="https://medpribor.pro/files/2018/02/cd650ad8756b195a369f1733ed1a046c.jpg" alt="Alt 1" data-caption="Caption 1" data-href="demo.html">
                             </li>
-                            <li data-thumb="./images/src/t1.png" class="big-picture horizPicture">
-                                <img src="./images/src/t4.png" alt="Alt 1" data-caption="Caption 1" data-href="demo.html">
+                            <li data-thumb="https://medpribor.pro/files/2018/02/14f09f919e4e1a5db86ad57c546a12d9.jpg" class="big-picture horizPicture">
+                                <img src="https://medpribor.pro/files/2018/02/14f09f919e4e1a5db86ad57c546a12d9.jpg" alt="Alt 1" data-caption="Caption 1" data-href="demo.html">
                             </li>
                         </ul>
                     </div>
@@ -70,24 +70,24 @@
                     </p>
                     <div class="costWrap">
                         <div class="cost cost_header">215 000₽</div>
-                        <div class="button button_buy">купить</div>
+                        <a class="button button_buy" href="#form">купить</a>
                     </div>
                 </div>
             </div>
             <div class="col-md">
                 <div class="vert">
                     <ul id="vertical">
-                        <li data-thumb="./images/src/big-img-1.png" class="big-picture">
-                            <img src="./images/src/t1.png" alt="Alt 1" data-caption="Caption 1" data-href="demo.html">
+                        <li data-thumb="https://medpribor.pro/files/2018/02/89e05b06bfb46ae3b527b7b5246820ab.jpg" class="big-picture">
+                            <img src="https://medpribor.pro/files/2018/02/89e05b06bfb46ae3b527b7b5246820ab.jpg" alt="Alt 1" data-caption="Caption 1" data-href="demo.html">
                         </li>
-                        <li data-thumb="./images/src/t2.png" class="big-picture">
-                            <img src="./images/src/t2.png" alt="Alt 1" data-caption="Caption 1" data-href="demo.html">
+                        <li data-thumb="https://medpribor.pro/files/2018/02/2c75cb58acfe7a8a69d9354d9df79126.jpg" class="big-picture">
+                            <img src="https://medpribor.pro/files/2018/02/2c75cb58acfe7a8a69d9354d9df79126.jpg" alt="Alt 1" data-caption="Caption 1" data-href="demo.html">
                         </li>
-                        <li data-thumb="./images/src/t1.png" class="big-picture">
-                            <img src="./images/src/t3.png" alt="Alt 1" data-caption="Caption 1" data-href="demo.html">
+                        <li data-thumb="https://medpribor.pro/files/2018/02/cd650ad8756b195a369f1733ed1a046c.jpg" class="big-picture">
+                            <img src="https://medpribor.pro/files/2018/02/cd650ad8756b195a369f1733ed1a046c.jpg" alt="Alt 1" data-caption="Caption 1" data-href="demo.html">
                         </li>
-                        <li data-thumb="./images/src/t1.png" class="big-picture">
-                            <img src="./images/src/t4.png" alt="Alt 1" data-caption="Caption 1" data-href="demo.html">
+                        <li data-thumb="https://medpribor.pro/files/2018/02/14f09f919e4e1a5db86ad57c546a12d9.jpg" class="big-picture">
+                            <img src="https://medpribor.pro/files/2018/02/14f09f919e4e1a5db86ad57c546a12d9.jpg" alt="Alt 1" data-caption="Caption 1" data-href="demo.html">
                         </li>
                     </ul>
                 </div>
@@ -142,7 +142,7 @@
 						</span>
                     <div class="productCard__cost">
                         <div class="cost cost_card">215 000₽</div>
-                        <div class="button button_card">купить</div>
+                        <a class="button button_card" href="#form">купить</a>
                     </div>
                 </div>
                 <div class="productCard">
@@ -150,11 +150,11 @@
                         <img src="images/src/product2.png" alt="product">
                     </div>
                     <span class="productCard__title">
-							BMC RESMART BPAP GII Y30T
+							MEDTRONIC PURITAN BENNETT 560 – ПОРТАТИВНЫЙ ИВЛ
 						</span>
                     <div class="productCard__cost">
                         <div class="cost cost_card">215 000₽</div>
-                        <div class="button button_card">купить</div>
+                        <a class="button button_card" href="#form">купить</a>
                     </div>
                 </div>
                 <div class="productCard">
@@ -162,11 +162,11 @@
                         <img src="images/src/product3.png" alt="product">
                     </div>
                     <span class="productCard__title">
-							BMC RESMART BPAP GII Y30T
+							WEINMANN PRISMA LAB УНИВЕРСАЛЬНАЯ НВЛ
 						</span>
                     <div class="productCard__cost">
                         <div class="cost cost_card">215 000₽</div>
-                        <div class="button button_card">купить</div>
+                        <a class="button button_card" href="#form">купить</a>
                     </div>
                 </div>
             </div>
@@ -184,7 +184,7 @@
 						</span>
             <div class="productCard__cost">
                 <div class="cost cost_card">215 000₽</div>
-                <div class="button button_card">купить</div>
+                <a class="button button_card" href="#form">купить</a>
             </div>
         </div>
     </li>
@@ -198,7 +198,7 @@
 						</span>
             <div class="productCard__cost">
                 <div class="cost cost_card">215 000₽</div>
-                <div class="button button_card">купить</div>
+                <a class="button button_card" href="#form">купить</a>
             </div>
         </div>
     </li>
@@ -212,7 +212,7 @@
 						</span>
             <div class="productCard__cost">
                 <div class="cost cost_card">215 000₽</div>
-                <div class="button button_card">купить</div>
+                <a class="button button_card" href="#form">купить</a>
             </div>
         </div>
     </li>
@@ -226,7 +226,7 @@
 						</span>
             <div class="productCard__cost">
                 <div class="cost cost_card">215 000₽</div>
-                <div class="button button_card">купить</div>
+                <a class="button button_card" href="#form">купить</a>
             </div>
         </div>
     </li>
@@ -240,7 +240,7 @@
 						</span>
             <div class="productCard__cost">
                 <div class="cost cost_card">215 000₽</div>
-                <div class="button button_card">купить</div>
+                <a class="button button_card" href="#form">купить</a>
             </div>
         </div>
     </li>
@@ -254,7 +254,7 @@
 						</span>
             <div class="productCard__cost">
                 <div class="cost cost_card">215 000₽</div>
-                <div class="button button_card">купить</div>
+                <a class="button button_card" href="#form">купить</a>
             </div>
         </div>
     </li>
@@ -642,7 +642,7 @@ Vte, Утечки, Целевой объем
             </div>
         </div>
         <div class="video col-md-12">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/tgbNymZ7vqY">
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/AwtAvXLxI-M">
             </iframe>
         </div>
     </div>
@@ -769,12 +769,12 @@ Vte, Утечки, Целевой объем
 </section>
 <!-- SQ Docs -->
 <!-- SQ Req -->
-<section class="sq sq_grey sq-req">
+<section class="sq sq_grey sq-req" id="form">
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-sm-12">
                 <div class="text-wrap">
-                    <h2 class="title" style="font-size: 36px">
+                    <h2 class="title" style="font-size: 36px" >
                         Заявка на покупку
                     </h2>
                     <form action="/action_page.php" class="sendForm">
@@ -804,9 +804,9 @@ Vte, Утечки, Целевой объем
                 </div>
             </div>
             <div class="col-md-2 col-sm-12">
-                <div class="button button_navbar">
+                <a class="button button_navbar" href="#form">
                     Заказать
-                </div>
+                </a>
             </div>
         </div>
         <div class="row">
