--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 							BMC RESMART BPAP GII Y30T
 						</span>
                     <div class="productCard__cost">
-                        <div class="cost cost_card">215 000₽</div>
+                        <div class="cost cost_card">204 000₽</div>
                         <a class="button button_card" href="#form">купить</a>
                     </div>
                 </div>
@@ -153,7 +153,7 @@
 							MEDTRONIC PURITAN BENNETT 560 – ПОРТАТИВНЫЙ ИВЛ
 						</span>
                     <div class="productCard__cost">
-                        <div class="cost cost_card">215 000₽</div>
+                        <div class="cost cost_card">934 560₽</div>
                         <a class="button button_card" href="#form">купить</a>
                     </div>
                 </div>
@@ -165,7 +165,7 @@
 							WEINMANN PRISMA LAB УНИВЕРСАЛЬНАЯ НВЛ
 						</span>
                     <div class="productCard__cost">
-                        <div class="cost cost_card">215 000₽</div>
+                        <div class="cost cost_card">340 000₽</div>
                         <a class="button button_card" href="#form">купить</a>
                     </div>
                 </div>
@@ -177,13 +177,13 @@
     <li class="item-a">
         <div class="productCard">
             <div class="productCard__img">
-                <img src="images/src/product2.png" alt="product">
+                <img src="images/src/product1.png" alt="product">
             </div>
             <span class="productCard__title">
 							BMC RESMART BPAP GII Y30T
 						</span>
             <div class="productCard__cost">
-                <div class="cost cost_card">215 000₽</div>
+                <div class="cost cost_card">204 000₽</div>
                 <a class="button button_card" href="#form">купить</a>
             </div>
         </div>
@@ -194,10 +194,10 @@
                 <img src="images/src/product2.png" alt="product">
             </div>
             <span class="productCard__title">
-							BMC RESMART BPAP GII Y30T
+							MEDTRONIC PURITAN BENNETT 560 – ПОРТАТИВНЫЙ ИВЛ
 						</span>
             <div class="productCard__cost">
-                <div class="cost cost_card">215 000₽</div>
+                <div class="cost cost_card">934 560₽</div>
                 <a class="button button_card" href="#form">купить</a>
             </div>
         </div>
@@ -205,59 +205,18 @@
     <li class="item-c">
         <div class="productCard">
             <div class="productCard__img">
-                <img src="images/src/product2.png" alt="product">
+                <img src="images/src/product3.png" alt="product">
             </div>
             <span class="productCard__title">
-							BMC RESMART BPAP GII Y30T
+							WEINMANN PRISMA LAB УНИВЕРСАЛЬНАЯ НВЛ
 						</span>
             <div class="productCard__cost">
-                <div class="cost cost_card">215 000₽</div>
+                <div class="cost cost_card">340 000₽</div>
                 <a class="button button_card" href="#form">купить</a>
             </div>
         </div>
     </li>
-    <li class="item-a">
-        <div class="productCard">
-            <div class="productCard__img">
-                <img src="images/src/product2.png" alt="product">
-            </div>
-            <span class="productCard__title">
-							BMC RESMART BPAP GII Y30T
-						</span>
-            <div class="productCard__cost">
-                <div class="cost cost_card">215 000₽</div>
-                <a class="button button_card" href="#form">купить</a>
-            </div>
-        </div>
-    </li>
-    <li class="item-b">
-        <div class="productCard">
-            <div class="productCard__img">
-                <img src="images/src/product2.png" alt="product">
-            </div>
-            <span class="productCard__title">
-							BMC RESMART BPAP GII Y30T
-						</span>
-            <div class="productCard__cost">
-                <div class="cost cost_card">215 000₽</div>
-                <a class="button button_card" href="#form">купить</a>
-            </div>
-        </div>
-    </li>
-    <li class="item-c">
-        <div class="productCard">
-            <div class="productCard__img">
-                <img src="images/src/product2.png" alt="product">
-            </div>
-            <span class="productCard__title">
-							BMC RESMART BPAP GII Y30T
-						</span>
-            <div class="productCard__cost">
-                <div class="cost cost_card">215 000₽</div>
-                <a class="button button_card" href="#form">купить</a>
-            </div>
-        </div>
-    </li>
+
 </ul>
 <!-- IVL Text -->
 <!-- IVL Text -->
